@startuml 风险预警模块E-R图

skinparam linetype ortho
skinparam packageStyle rectangle

entity "account" as account {
  * id : BIGINT <<PK>>
  --
  * role_id : VARCHAR
  * name : VARCHAR
  * account_name : VARCHAR
  * password : VARCHAR
  * phone_number : VARCHAR
  avator_url : VARCHAR
}

entity "eyessight" as eyessight {
  * id : BIGINT <<PK>>
  --
  * od : BIGINT
  * os : BIGINT
  * eyes_time : BIGINT
  * has_glasses : BOOLEAN
  * people_id : BIGINT <<FK>>
}

entity "visit_history" as visit_history {
  * id : BIGINT <<PK>>
  --
  registration_id : BIGINT
  * doctor_account_id : BIGINT <<FK>>
  * patient_account_id : BIGINT <<FK>>
  * visit_date : BIGINT
  * od : BIGINT
  * os : BIGINT
  * created_at : BIGINT
}

entity "risk_warning" as risk_warning {
  * id : BIGINT <<PK>>
  --
  * student_account_id : BIGINT <<FK>>
  * level : VARCHAR
  * trigger_type : VARCHAR
  * trigger_reason : VARCHAR
  * status : VARCHAR
  * created_at : BIGINT
  resolved_at : BIGINT
  resolver_account_id : BIGINT <<FK>>
  resolution_note : VARCHAR
}

entity "risk_warning_message" as risk_warning_message {
  * id : BIGINT <<PK>>
  --
  * warning_id : BIGINT <<FK>>
  * receiver_account_id : BIGINT <<FK>>
  * receiver_role : VARCHAR
  * read_status : BOOLEAN
  * created_at : BIGINT
}

account ||--o{ eyessight : people_id
account ||--o{ visit_history : patient_account_id
account ||--o{ risk_warning : student_account_id
risk_warning ||--o{ risk_warning_message : warning_id
account ||--o{ risk_warning_message : receiver_account_id

@enduml
